[gd_scene load_steps=16 format=2]

[ext_resource path="res://Samfront.png" type="Texture" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]
[ext_resource path="res://Schwerz3.png" type="Texture" id=3]
[ext_resource path="res://Schwerz2.png" type="Texture" id=4]
[ext_resource path="res://Schwerz4.png" type="Texture" id=5]
[ext_resource path="res://Schwerz1.png" type="Texture" id=6]
[ext_resource path="res://Schwerz6.png" type="Texture" id=7]
[ext_resource path="res://Schwerz7.png" type="Texture" id=8]
[ext_resource path="res://Schwerz5.png" type="Texture" id=9]
[ext_resource path="res://Samback.png" type="Texture" id=10]
[ext_resource path="res://Samleftt.png" type="Texture" id=11]
[ext_resource path="res://Samright.png" type="Texture" id=12]
[ext_resource path="res://HP.png" type="Texture" id=13]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 60.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 5.56107, 10.9677 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
z_index = 10
z_as_relative = false
current = true
zoom = Vector2( 0.4, 0.4 )

[node name="HP1" type="Sprite" parent="Camera2D"]
position = Vector2( 146.913, 105.919 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="HP2" type="Sprite" parent="Camera2D"]
position = Vector2( 191.531, 106.199 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="HP3" type="Sprite" parent="Camera2D"]
position = Vector2( 169.082, 106.199 )
rotation = 3.14159
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0.561218, -3.36738 )
rotation = 3.13985
texture = ExtResource( 1 )

[node name="SchwertMove" type="AnimatedSprite" parent="Sprite"]
visible = false
position = Vector2( -0.132439, -9.2703 )
frames = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.489907, -2.33657 )
scale = Vector2( -1.02363, 1.30202 )
shape = SubResource( 2 )

[node name="SpriteUp" type="Sprite" parent="."]
visible = false
texture = ExtResource( 10 )

[node name="SpriteLeft" type="Sprite" parent="."]
visible = false
texture = ExtResource( 11 )

[node name="SpriteRight" type="Sprite" parent="."]
visible = false
texture = ExtResource( 12 )

[node name="PlayerStatsUpdate" type="Timer" parent="."]
wait_time = 0.1
autostart = true
[connection signal="animation_finished" from="Sprite/SchwertMove" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="timeout" from="PlayerStatsUpdate" to="." method="_on_PlayerStatsUpdate_timeout"]
